<?xml version="1.0"?>
<package format="2">
    <name>plot</name>
    <version>0.0.0</version>
    <description>The plot package</description>

    <maintainer email="lwx@lwx.com">PR</maintainer>
    <license>Apache-2.0</license>
    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>rosmsg</depend>
    <!-- <depend>tf2_ros</depend> -->
    <!-- <depend>tf2_eigen</depend> -->
    <!-- <depend>cv_bridge</depend> -->
    <!-- <depend>image_transport</depend> -->

    <!-- <depend>nav_msgs</depend> -->
    <depend>sensor_msgs</depend>
    <!-- <depend>visualization_msgs</depend> -->
    
    <depend>myodom</depend>
    <depend>atp_info</depend>
    <depend>myresult</depend>
    <!-- <depend>loop_action</depend> -->
    
<!--	
	<build_depend>sensor_pub</build_depend>
	<run_depend>sensor_pub</run_depend>

	<build_depend>message_generation</build_depend>
	<build_depend>message_runtime</build_depend>
	<run_depend>message_generation</run_depend>
	<run_depend>message_runtime</run_depend>
-->
    <export>
    </export>
</package>
